@@ -1,3 +1,11 @@
 = aurelhy To Do list
 
-* ...
+* The geopoints object used for data to interpolate
+
+* The update() and predict() methods for the aurelhy object
+
+* Full handling of square auremasks
+ 
+* Creation of a mask from a geomat and a geoshape objects
+
+* The vignette for this package
